// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for the Create Listing Page Snapshot Test for Search by Product Type Keywords 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthMd css-xdmu94-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-13mqtjd-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Search For Product Types at Amazon based on Keywords or ItemName
        </h6>
      </div>
    </div>
    <div>
      <p>
        ProductTypeSearchFormComponent
      </p>
      <button>
        ProductTypeSearchFormComponentSubmit
      </button>
    </div>
    <div>
      <p>
        ProductTypeChooserComponent
      </p>
      <button>
        ProductTypeChooserComponentSubmit
      </button>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      style="margin: 1rem 0px; border-bottom-width: 3px; border-color: #333;"
    />
    <div>
      <p>
        ListingCreationFormComponent
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test for the Create Listing Page Snapshot Test for create Listing home page  1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthMd css-xdmu94-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-13mqtjd-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Search For Product Types at Amazon based on Keywords or ItemName
        </h6>
      </div>
    </div>
    <div>
      <p>
        ProductTypeSearchFormComponent
      </p>
      <button>
        ProductTypeSearchFormComponentSubmit
      </button>
    </div>
  </div>
</DocumentFragment>
`;
